--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
     "typescript-eslint-parser": "^22.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "lint": "eslint ./src --fix",
+    "lint": "eslint . --ignore-path .gitignore",
+    "format": "prettier --write . --ignore-path .gitignore",
+    "fix-style": "npm run format & npm run lint -- --fix",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.ts": "npm run lint"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +55,9 @@
     "@mate-academy/eslint-config-react-typescript": "^0.0.4",
     "eslint": "^7.25.0",
     "gh-pages": "^3.1.0",
-    "node-sass": "^5.0.0"
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
+    "node-sass": "^5.0.0",
+    "prettier": "2.8.6"
   }
 }
